syntax = "proto3";

package payments;
option go_package = "microservices/paymentspb";

service Payments {
  rpc CreateCharge (ChargeRequest) returns (ChargeResponse);
}

message ChargeRequest {
  int64 amount = 1;
}

message ChargeResponse {
  bool success = 1;
  string id = 2;
  int64 amount = 3;
  string status = 4;
}